[MODORDERS-1039] Update encumbrance expense class (#849)