@@ -1,6 +1,5 @@
 package org.folio.service.finance.transaction;
 
-import static java.util.stream.Collectors.toList;
 import static org.folio.orders.utils.FundDistributionUtils.validateFundDistributionTotal;
 
 import java.util.List;
@@ -8,6 +7,7 @@ import java.util.Objects;
 
 import org.folio.models.EncumbranceRelationsHolder;
 import org.folio.models.EncumbrancesProcessingHolder;
+import org.folio.rest.acq.model.finance.Encumbrance;
 import org.folio.rest.acq.model.finance.Transaction;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.jaxrs.model.CompositePurchaseOrder;
@@ -44,8 +44,10 @@ public class PendingToPendingEncumbranceStrategy implements EncumbranceWorkflowS
 
   private EncumbrancesProcessingHolder distributeHoldersByOperation(List<EncumbranceRelationsHolder> encumbranceRelationsHolders) {
     EncumbrancesProcessingHolder holder = new EncumbrancesProcessingHolder();
+    List<EncumbranceRelationsHolder> toUpdate = getTransactionsToUpdate(encumbranceRelationsHolders);
     List<EncumbranceRelationsHolder> toDelete = getTransactionsToDelete(encumbranceRelationsHolders);
-    List<Transaction> toRelease = toDelete.stream().map(EncumbranceRelationsHolder::getOldEncumbrance).collect(toList());
+    List<Transaction> toRelease = toDelete.stream().map(EncumbranceRelationsHolder::getOldEncumbrance).toList();
+    holder.withEncumbrancesForUpdate(toUpdate);
     holder.withEncumbrancesForRelease(toRelease);
     holder.withEncumbrancesForDelete(toDelete);
     return holder;
@@ -54,7 +56,31 @@ public class PendingToPendingEncumbranceStrategy implements EncumbranceWorkflowS
   private List<EncumbranceRelationsHolder> getTransactionsToDelete(List<EncumbranceRelationsHolder> encumbranceRelationsHolders) {
     return encumbranceRelationsHolders.stream()
       .filter(holder -> Objects.isNull(holder.getNewEncumbrance()))
-      .collect(toList());
+      .toList();
+  }
+
+  private List<EncumbranceRelationsHolder> getTransactionsToUpdate(List<EncumbranceRelationsHolder> encumbranceRelationsHolders) {
+    // Return a list of holders with transactions that need to have an expense class update.
+    // We want to avoid loading all financial data like in pending->open, so we copy some fields
+    // from the old encumbrance (amount is 0 with pending orders).
+    List<EncumbranceRelationsHolder> toUpdate = encumbranceRelationsHolders.stream()
+      .filter(holder -> holder.getNewEncumbrance() != null && holder.getOldEncumbrance() != null &&
+        !Objects.equals(holder.getNewEncumbrance().getExpenseClassId(), holder.getOldEncumbrance().getExpenseClassId()))
+      .toList();
+    toUpdate.forEach(holder -> {
+      Transaction oldEncumbrance = holder.getOldEncumbrance();
+      Transaction newEncumbrance = holder.getNewEncumbrance();
+      newEncumbrance.withFiscalYearId(oldEncumbrance.getFiscalYearId())
+        .withCurrency(oldEncumbrance.getCurrency())
+        .withAmount(oldEncumbrance.getAmount())
+        .getEncumbrance()
+          .withInitialAmountEncumbered(oldEncumbrance.getEncumbrance().getInitialAmountEncumbered())
+          .withOrderStatus(Encumbrance.OrderStatus.PENDING)
+          .withStatus(oldEncumbrance.getEncumbrance().getStatus())
+          .withSubscription(oldEncumbrance.getEncumbrance().getSubscription())
+          .withReEncumber(oldEncumbrance.getEncumbrance().getReEncumber());
+    });
+    return toUpdate;
   }
 
 }
